recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:14: error: ')' expected but '}' found.
  pentaKoch(levels-1, length*0.4)}
                                 ^